2017-09-30  v1.1.0  Steven X. Han   <steven.han@anu.edu.au>

    * Move the following functions into Data.Board from Transition.Mechanics
        * updateBoard
        * isGameOver
        * hasWon
        * placePiece
        
2017-10-01  v1.2.0  Steven X. Han   <steven.han@anu.edu.au>

    * Expose `getScore` in Data.Board to other modules.
    * Fixed a bug in Transition.Mechanics
    
2017-10-01  v1.3.0  Steven X. Han   <steven.han@anu.edu.au>

    * Change Blue bot back to undefined.
    * Change Runtime tests to run with default environment.