@@ -12,8 +12,8 @@ module Data.Board (
     validMove,      -- :: Board -> Index -> Bool,
     winBonus,       -- :: Board -> Score
     updateBoard,    -- :: Board -> Index -> Board
+    initialiseBoard, -- :: Dimension -> Player -> Int -> Board
     getScore,       -- :: Board -> Player -> Score
-    initialiseBoard -- :: Dimension -> Player -> Int -> Board
 ) where
 
 import Data.Cell (Cell (Empty))
@@ -33,7 +33,7 @@ data Board = Board { board     :: Matrix Cell
                    , connect   :: Int
                    }
     deriving (Eq)
-                   
+
 type Dimension = (Int, Int)
 
 type LookAhead = Int
@@ -43,16 +43,18 @@ type Index     = Int
 type Score     = Int
 
 instance Show Board where
-    show b = 
+    show b =
         intercalate " | " (map show [1 .. x]) ++ "\n" ++
         replicate (4 * x - 3) '-' ++ "\n" ++
-        (intercalate "\n" 
+        (intercalate "\n"
             $ map (intercalate " | ")
-                $ map (map show) 
+                $ map (map show)
                     $ reverse . transpose $ filledMat) ++
         "\n" ++ replicate (4 * x - 3) '-' ++
-        "\n" ++ intercalate " | " (map show [1 .. x])
-    
+        "\n" ++ intercalate " | " (map show [1 .. x]) ++
+        "\n" ++ "Turn: " ++ show (turn b) ++ " - " ++ show (corresCell (turn b)) ++
+        "\n" ++ "BlueScore: " ++ show (blueScore b) ++ "; RedScore: " ++ show (redScore b)
+
         where
             (x, _)    = dimension b
             boardMat  = board b
@@ -67,8 +69,8 @@ initialiseBoard d@(x, _) p i = Board {
     dimension = d,
     connect   = i
     }
-    
-        
+
+
 validMove :: Board -> Index -> Bool
 validMove b i = case turn b of
     Finished -> False
@@ -78,37 +80,37 @@ validMove b i = case turn b of
         height = snd $ dimension b
         i' = i - 1
         mat = board b
-        
+
 scorise :: Board -> Board
 scorise b = b { blueScore = getScore b BlueBot,
                 redScore  = getScore b RedBot }
-                
+
 getScore :: Board -> Player -> Score
 getScore b p = sum [columnScore, rowScore, diagonalScore, otherDiagScore]
     where
         streak    = connect b
         minStreak = 1 + streak `div` 2
         otherBot  = otherPlayer p
-        
+
         columnScore    = calculateScore $ filledMatrix
         rowScore       = calculateScore $ transpose $ filledMatrix
         diagonalScore  = calculateScore $ diagonals $ filledMatrix
         otherDiagScore = calculateScore $ diagonals $ map reverse $ filledMatrix
-        
+
         filledMatrix   = map (fillColumn Empty $ snd $ dimension b) $ board b
-        
-        calculateScore mat = 
-            sum $ (map (streakScore . length)) 
-                $ filter ((>=minStreak).length) 
-                    $ concatMap 
-                        (concatMap (splitOn [corresCell otherBot])) 
+
+        calculateScore mat =
+            sum $ (map (streakScore . length))
+                $ filter ((>=minStreak).length)
+                    $ concatMap
+                        (concatMap (splitOn [corresCell otherBot]))
                             $ map (splitOn [Empty]) mat
-        
+
         streakScore :: Int -> Score
         streakScore i
             | i < minStreak = 0
             | otherwise     = i * 5
-            
+
 winBonus :: Board -> Score
 winBonus b = uncurry (*) $ dimension b
 
@@ -117,8 +119,8 @@ winBonus b = uncurry (*) $ dimension b
 updateBoard :: Board -> Index -> Board
 updateBoard b i
     | hasWon b            = case turn b of
-                                BlueBot -> b { turn = Finished, blueScore = blueScore b + winBonus b}
-                                RedBot  -> b { turn = Finished, redScore  = redScore b + winBonus b}
+                                BlueBot -> b { turn = Finished, redScore = redScore b + winBonus b}
+                                RedBot  -> b { turn = Finished, blueScore = blueScore b + winBonus b}
                                 _       -> b
     | isGameOver b        = b { turn = Finished }
     | not $ validMove b i = b
@@ -126,39 +128,39 @@ updateBoard b i
                               , turn = otherPlayer $ turn b}
         where
             newBoard = Board { board = placePiece (board b) i (turn b) }
-            
+
 isGameOver :: Board -> Bool
 isGameOver b = hasWon b || (and $ map (\x -> length x == depth) mat)
     where
         mat         = board b
         depth       = snd $ dimension b
-        
+
 hasWon :: Board -> Bool
 hasWon b = columnWin || rowWin || diagonalWin || otherDiagWin
     where
         streak      = connect b
         unfilledMat = board b
-        
+
         identicalElems :: (Eq a) => [a] -> Bool
-        identicalElems list = case list of  
+        identicalElems list = case list of
             x : y : xs -> x == y && identicalElems (y : xs)
             _          -> True
-            
+
         columnWin    = or $ map winInColumn unfilledMat
         rowWin       = or $ map winInColumn $ transpose unfilledMat
         diagonalWin  = or $ map winInColumn $ diagonals unfilledMat
-        otherDiagWin = or $ map (winInColumn . filter (/= Empty)) 
+        otherDiagWin = or $ map (winInColumn . filter (/= Empty))
                             $ diagonals $ map reverse $ board b
-        
+
         winInColumn :: Column Cell -> Bool
         winInColumn list = case list of
             []     -> False
-            _ : xs 
-                | length list >= streak -> 
-                    identicalElems (take streak list) 
+            _ : xs
+                | length list >= streak ->
+                    identicalElems (take streak list)
                     || winInColumn xs
                 | otherwise             -> False
-                
+
 placePiece :: Matrix Cell -> Index -> Player -> Matrix Cell
 placePiece mat i p = take i' mat ++ [pushToColumn (corresCell p) (mat !! i')] ++ drop i mat
     where
