@@ -8,7 +8,7 @@ module Data.Player (
     otherPlayer  -- :: Player -> Player
 ) where
     
-import Data.Cell (Cell (Blue, Red))
+import Data.Cell (Cell (Blue, Red, Empty))
     
 data Player = BlueBot | RedBot | Finished
     deriving (Show, Eq)
@@ -17,7 +17,7 @@ corresCell :: Player -> Cell
 corresCell p = case p of
     BlueBot -> Blue
     RedBot  -> Red
-    _       -> error "Game has already finished"
+    _       -> Empty
     
 otherPlayer :: Player -> Player
 otherPlayer p = case p of
